# observation-execution-tool

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .release  .validate-metadata.sh  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Dockerfile-ssh  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  code-analysis.sh  demo_commit_file.txt  docker-compose.yml  oet.ini  pyproject.toml  requirements-tst.txt  requirements.txt  setup.cfg  setup.py  setup.py-e  tox.ini
.make/: Makefile.mk  docker.mk  k8s.mk  release.mk
charts/oet/: Chart.yaml  Chart.yaml-e  values.yaml
charts/oet-umbrella/: Chart.yaml  values.yaml
charts/oet/data/: deallocate.py  example_sb.json  hello_world.py
charts/oet/templates/: itango.yaml  jupyter.yaml  rest.yaml  ssh.yaml
charts/ska-oso-oet/: Chart.yaml  values.yaml
charts/ska-oso-oet-umbrella/: Chart.yaml  values.yaml
charts/ska-oso-oet/data/: hello_world.py  hello_world_sb.py  hello_world_with_sb.py  hello_world_without_sb.py  low_sb_example.json  mid_sb_example.json
charts/ska-oso-oet/templates/: _helpers.tpl  environment.yaml  rest.yaml
charts/ska-oso-oet/tests/: environment_test.yaml  rest_test.yaml
charts/test-parent/: Chart.yaml  values.yaml
docs/: requirements.txt
docs/src/: architecture_backend_candc.rst  architecture_backend_module_activity.rst  architecture_backend_module_activity_ui.rst  architecture_backend_module_execution.rst  architecture_backend_module_script_exec_ui.rst  architecture_backend_module_ui.rst  architecture_module_rest_api.rst  cli.rst  conf.py  creation.puml  environment_variables.rst  index.rst  observing_scripts.rst  rest_api.rst  rest_client.rst  rest_server.rst  script_examples.rst
docs/src/_static/css/: custom.css
docs/src/deployment/: configuration.rst  deployment_to_kubernetes.rst  environment_variables.rst  persistent_environments.rst  quickstart.rst  secret_management.rst
docs/src/diagrams/: OETcontext.drawio  backend_candc_context.drawio  backend_candc_primary.drawio  backend_module_execution.drawio  backend_module_execution_context.puml  backend_module_execution_primary.puml  backend_module_execution_primary_activity.puml  backend_module_execution_primary_ses.puml  backend_module_execution_primay_procedure_state_flowchart.puml  backend_module_primary.drawio  backend_module_script_execution_primary.puml  backend_module_ui.drawio  backend_module_ui_primary.puml  backend_module_ui_primary_activity.puml  backend_module_ui_primary_script_exec.puml  backend_module_ui_sequence_activity_api_over_rest.puml  backend_module_ui_sequence_interprocess_pubsub.puml  backend_module_ui_sequence_scripting_api_over_rest.puml  backend_module_ui_sequence_scriptworker.puml  backend_module_ui_sequence_scriptworker_main_loop.puml  backend_module_ui_sequence_ses.puml  backend_module_ui_sequence_ses_prepare.puml  subscriptionmanager-class.puml  subscriptionmanager-sequence.puml
docs/src/general/: background.rst
docs/src/package/: domain.rst  guide.rst  observingtasks.rst  ska_oso_oet.rst
extras/jupyter/: Dockerfile  Makefile
extras/ssh/: Dockerfile  Makefile
images/ska-oso-oet/: Dockerfile
mptools/: __init__.py  _mptools.py  mptools_example.py  mptools_oet.py  mptools_restserver.py  web.py
oet/: __init__.py  command.py  domain.py  echo.py  features.py  observingtasks.py
oet/event/: topics.py
oet/mptools/: __init__.py  _mptools.py
oet/procedure/: domain.py  restclient.py
oet/procedure/application/: application.py  main.py  rest.py  restclient.py  restserver.py
post-deployment/: Makefile  SUT_requirements.txt  test_requirements.txt
post-deployment/tests/oet/: test_command.py
profile_ska/: history.sqlite  ipython_config.py
scripts/: SubArrayNodeConfig.csv  abort.py  allocate.py  allocate_from_file.py  allocate_from_file_sb.py  at2-165.py  configure_CDM_for_scan1.json  configure_CDM_for_scan2.json  configure_CDM_for_scan3.json  configure_CDM_for_scan4.json  csv_reader.py  deallocate.py  eventbus.py  example_allocate.json  example_configure.json  observe.py  observe_sb.py  reset.py  restart.py  test.py  test_script.py
scripts/data/: example_allocate.json  example_sb.json  long_sb.json
scripts/notebooks/: sb_observing_test.ipynb
sp354/: scan_definitions.csv
src/oet/: __init__.py  command.py  features.py  oet.ini
src/oet/event/: topics.py
src/oet/mptools/: __init__.py  _mptools.py
src/oet/procedure/: domain.py
src/ska_oso_oet/: __init__.py  auth.py  command.py  fastapi.py  features.py  main.py  ska_oso_oet.ini  tango.py  ui.py
src/ska_oso_oet/activity/: application.py  domain.py  fastapi.py  ui.py
src/ska_oso_oet/event/: topics.py
src/ska_oso_oet/mptools/: __init__.py  _mptools.py
src/ska_oso_oet/openapi/: activities.yaml  activity.yaml  common.yaml  components_activity.yaml  components_procedure.yaml  oet-openapi-v1.yaml  procedure.yaml  procedures.yaml
src/ska_oso_oet/procedure/: application.py  domain.py  environment.py  gitmanager.py  ui.py
src/ska_oso_oet/utils/: ui.py
ssh/: Dockerfile  Makefile
test-harness/: Makefile  README.md  test_cli_profile.exp
tests/: Makefile  requirements.txt  test_command.py  test_domain.py  test_echo.py  test_mptools.py  test_observingtasks.py
tests/acceptance/ska_oso_oet/: conftest.py  test_activities.py  test_auth.py  test_oet_connection.py  test_run_remote_script.py  test_run_script.py  test_script_not_found.py  test_stop_script.py  util.py
tests/acceptance/ska_oso_oet/test_project/: demo.py  pyproject.toml
tests/oet/: test_command.py  test_domain.py  test_features.py  test_observingtasks.py  testfile_sample_configure.json
tests/oet/mptools/: test_mptools.py  test_mptools_example.py
tests/oet/procedure/: test_domain.py
tests/unit/: conftest.py
tests/unit/oet/: test_command.py  test_features.py  test_observingtasks.py  testfile_sample_assign.json  testfile_sample_configure.json
tests/unit/ska_oso_oet/: test_auth.py  test_command.py  test_fastapi.py  test_features.py  test_main.py  test_tango.py  test_ui.py  testfile_sample_assign.json
(+87 files in other folders)
