[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = oet

[tool:pytest]
testpaths = tests
addopts = --cov=oet
          --json-report
          --json-report-file=build/reports/report.json
          --cov-report term
          --cov-report html:build/htmlcov
          --cov-report xml:build/reports/code-coverage.xml
          --junitxml=build/reports/unit-tests.xml
          --verbose
;          --import-mode importlib

console_output_style = progress
junit_family = legacy

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
