[tool.poetry]
name = "oetexample"
version = "0.1.0"
description = "OET example"
authors = ["Your Name <you@example.com>"]
license = "GPL"
packages = [
    { include = "demo", from = "src" }
]

[[tool.poetry.source]]
name = 'PyPI'
priority = 'primary'

[tool.poetry.dependencies]
python = "^3.10"
ska-oso-oet = "*"
emoji = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
